--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2525,107 +2525,107 @@ stories:
   domain: http://www.eurekaherald.com/
   link: https://www.eurekaherald.com/news/sale-benefit-richling-weekend
 images:
-- name: old-house-oldhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-green-zuma.jpg
-- name: legal-statue-legalstatue-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-hot-spicy.jpg
-- name: castle-wall-DSC-0067-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kandinsky-bv.JPG
-- name: border-fence-border-fence-on-hill-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-nazi-poster.jpg
-- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-- name: paris-paris-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-plentiful.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-- name: abandonedbuildings_gred_mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gred_mash.jpg
-- name: dragon-desert-desert-dragon-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-space-pizza.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-- name: stories-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
-- name: oldtrain-oldtrain-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-cinnamon-rolls.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
-- name: dragon-desert-desert-dragon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
-- name: lincoln-memorial-lincolnmemorial-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-plentiful.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
-- name: oldhouse-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-4.jpg
-- name: bordercrossing-bordercrossing-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colored-circuits.jpg
-- name: ellis-island-ellisisland-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
-- name: white-house-whitehouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sand-paper.jpg
-- name: aws-s3-stories-sand-hand-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sand-hand-light-dali.jpg
-- name: curtain-curtain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colored-circuits.jpg
-- name: locked-up-steam-lock-up-steam-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
-- name: mosaic-face-mosaic-face-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-neo-instinct.jpg
-- name: udnie-IMG_6950.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6950.jpg
-- name: razorwire-DSC-0080-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: gears-4882162452-fa3126b38d-b-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dry-skin.jpg
-- name: fence-mexico-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-atari-asteroids.jpg
-- name: containership-containership-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-rainbow-festival.jpg
-- name: berlinwall-DSC-0084-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-brush.jpg
-- name: curtain-curtain-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-emily-carr.jpg
-- name: adam-smith-adam-smith-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-asteroids.jpg
-- name: aws-s3-stories-new-16-38-600-500-0-max-1-1-2-0.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-38-600-500-0-max-1-1-2-0.jpg
-- name: containership-containership-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colorful-blocks.jpg
-- name: beach-clouds-lifeguard-beachclouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dry-skin.jpg
-- name: yosemite-yosemite-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
-- name: oldbarn-oldbarn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
-- name: status-berlin-status-berlin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-matrix.jpg
-- name: carry-load-carryload-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-mucha-mult.jpg
-- name: machine-road-machine-road-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit.jpg
-- name: sand-hand-sand-hand-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-oily-mcoilface.jpg
-- name: paris-paris-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-neo-instinct.jpg
-- name: machine-road-machine-road-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gred-mash.jpg
-- name: store-on-corner-oldcabin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-nazi-poster.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
-- name: liberty-back-statue-liberty-back-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kandinsky-bv.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
-- name: subway-subway-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-rainbow-festival.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
+- name: abandonedbuildings_crafty_painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crafty_painting.jpg
+- name: old-granary-field-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+- name: oldhouse-oldhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-rainbow-festival.jpg
+- name: meadowbutterfly-meadow-butterfly-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-spagetti-accident.jpg
+- name: catacombs-catacombs-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-oily-mcoilface.jpg
+- name: supreme-court-supremecourt-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-monet-one.jpg
+- name: trucksilo-trucksilo-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+- name: amusement-park-amusement-park-2-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gan-vogh.jpg
+- name: mosaic-face-mosaic-face-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-nazi-poster.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+- name: powerlines-power-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-spagetti-accident.jpg
+- name: berlinwall2-berlinwall-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-constitution.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+- name: border-crossing-bordercrossing-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alien-goggles.png
+- name: server-cloud-server-racks-clouds-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-propaganda-leaflets.jpg
+- name: nazi-invasion-P5290036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P5290036.jpg
+- name: old-church-oldchurch-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crafty-painting.jpg
+- name: meadowbutterfly-meadow-butterfly-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-wols.jpg
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: oldhousecars-house-old-cars-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sand-paper.jpg
+- name: amusement-park-amusement-park-2-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dali-two.jpg
+- name: powerlines-power-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smoking-cigarette.jpg
+- name: razorcliff-razorcliff-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-light-dali.jpg
+- name: blossombar-clean-view-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-00-00.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+- name: hollywood-building-hollywood-building-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alberto-giacometti.jpg
+- name: razorcliff-razorcliff-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sand-paper.jpg
+- name: blossombar-purple-storm-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-50-62.jpg
+- name: power-lines-power-lines-empty-space-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-spagetti-accident.jpg
+- name: docks-docks-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
+- name: ellis-island-ellisisland-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-internet-numbers.jpg
+- name: mistywoods-babyfoot-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
+- name: stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
+- name: aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+- name: christianity-christianity-under-construction-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alberto-giacometti.jpg
+- name: downtheline-downtheline-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crabapple.jpg
+- name: old-school-house-old-schoolhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
+- name: gypsymosaic-gypsy-eyes-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dry-skin.jpg
+- name: old-church-oldchurch-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-matrix.jpg
+- name: yosemite-yosemite-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-circuit.jpg
+- name: oldhouse-oldhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-cinnamon-rolls.jpg
+- name: containership-containership-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dali-two.jpg
+- name: hollywood-building-hollywood-building-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crabapple.jpg
+- name: ellis-island-ellisisland-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
+- name: power-lines-power-lines-empty-space-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-three.jpg
+- name: cyber-api-description-wars-img-3820-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-3820-dark-dali.jpg
+- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+- name: server-cloud-server-racks-door-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit.jpg
 ---
 At Tehran Symphony, Music Lovers Seek Escape From Reality.&nbsp;Beautiful Day Draws Heavy Crowds In Lake George.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Ice Cube Enjoying The Good Days In 3rd Year Of Big3.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Coco Gauff Headlines Play On Centre Court At Wimbledon.&nbsp;Signature Boston Fourth Of July Event Again Draws Crowds.&nbsp;Expo Square Showcases New Equine Livestock Stalls In Super Duty Barn.&nbsp;
